--- a/card/20170919-创新算法.md
+++ b/card/20170919-创新算法.md
@@ -3,4 +3,11 @@
 - 常识：创造力是指人的想象力以及将设想变为现实的能力
 - 印象：长期以来，发明家大多采用**试错法**来寻找解决问题的办法，效率低下。而有一类发明问题，「一旦表述准确，问题就能自动解决」。
 - 例子：《发明家和创新者》杂志发表的E.范丽特尼科夫（E.Veretennikov,技术科学博士）找到组装螺旋钻头的自动化方法的例子中，博士先想到由绳子固定，再是薄膜，最后才想到使用磁力固定两个金属部件。而阿奇舒勒指出，如果一开始就将问题表述为：「滚珠轴承要定位在钻柄上，并且在切刀头放好之前不能掉下来」，实际需要解决的问题是：一个金属部件必须临时与另一个金属部件连在一起，再补充限制条件，「不能用其他任何物质（如油脂），不需要很大的力，只要能补偿部件的自重」。使用磁力这样的方案很容易想的到。
-- 出处：《创新算法》P8-9，
+- 出处：《创新算法》P8-9
+
+### 术语卡
+- 术语：启发法（Heuristic）
+- 印象：
+- 例子：
+- 出处：[wiki词条-heuristic](https://en.wikipedia.org/wiki/Heuristic#frb-inline),[](https://en.wikipedia.org/wiki/Heuristic_(computer_science))
+
