--- a/card/20170919-创新算法.md
+++ b/card/20170919-创新算法.md
@@ -9,5 +9,5 @@
 - 术语：启发法（Heuristic）
 - 印象：
 - 例子：
-- 出处：[wiki词条-heuristic](https://en.wikipedia.org/wiki/Heuristic#frb-inline),[](https://en.wikipedia.org/wiki/Heuristic_(computer_science))
+- 出处：[wiki词条-heuristic](https://en.wikipedia.org/wiki/Heuristic#frb-inline),[wiki词条-heuristic（computer）](https://en.wikipedia.org/wiki/Heuristic_(computer_science))
 
