--- a/works/姑姑语录@张爱玲.md
+++ b/works/姑姑语录@张爱玲.md
@@ -24,15 +24,14 @@
 从前有一个时期她在无线电台上报告新闻，诵读社论，每天工作半小时。她感慨地说：“我每天说半个钟头没意思的话，可以拿好几万的薪水，我一天到晚说着有意思的话，却拿
 不到一个钱。”
 
-她批评一个胆小的人吃吃艾艾的演说：“人家睡珠咳玉，他是珠玉卡住了喉咙了。”
+她批评一个胆小的人吃吃艾艾的演说：“人家唾珠咳玉，他是珠玉卡住了喉咙了。”
 
-“爱德华七世路”（爱多亚路）我弄错了当做是“爱德华八世路”，她说：“爱德华八世
-还没来得及成马路呢。”
+“爱德华七世路”（爱多亚路）我弄错了当做是“爱德华八世路”，她说：“爱德华八世还没来得及成马路呢。”
 
-她对于我们张家的人没有多少好感——对我比较好些，但也是因为我自动地粘附上来，拿我无可奈何的缘故。就这样她也常常抱怨：“和你住在一起，使人变得非常唠叨（因为需
-要嘀嘀咕咕）而且自大（因为对方太低能）。”
+她对于我们张家的人没有多少好感——对我比较好些，但也是因为我自动地粘附上来，拿我无可奈何的缘故。就这样她也常常抱怨：“和你住在一起，使人变得非常唠叨（因为需要嘀嘀咕咕）而且自大（因为对方太低能）。”
 
-有一次她说到我弟弟很可怜地站在她眼前：“一双大眼睛吧达吧达望着我。”“吧达吧达”四个字用得真是好，表现一个无告的男孩子沉重而潮湿地目夹着眼。  她说她自己：“我
+有一次她说到我弟弟很可怜地站在她眼前：“一双大眼睛吧达吧达望着我。”“吧达吧达”四个字用得真是好，表现一个无告的男孩子沉重而潮湿地目夹着眼。
+她说她自己：“我
 是文武双全，文能够写信，武能够纳鞋底。”我在香港读书的时候顶喜欢收到她的信，淑女化的蓝色字细细写在极薄的粉红拷贝纸上，（是她办公室里省下来的，用过的部分裁了去，
 所以一页页大小不等，读起来淅沥煞辣作脆响。）信里有一种无聊的情趣，总像是春夏的晴天。语气很平淡，可是用上许多惊叹号，几乎全用惊叹号来做标点，十年前是有那么一派的
 时髦文章的罢？还有，她老是写着“狠好，”“狠高兴，”我同她辩驳过，她不承认她这里应当用“很”字。后来我问她：“那么，‘凶狠’的‘狠’字，姑姑怎么写呢？”她也写作“狠”。
