--- a/works/草炉饼@张爱玲.md
+++ b/works/草炉饼@张爱玲.md
@@ -5,5 +5,61 @@
 二次大战上海沦陷后天天有小贩叫卖：“马草炉饼！”
 
 吴语“买”“卖”同音“马”，“炒”音“草”，所以先当是“炒炉饼”，再也没想到有专烧茅草的火炉。卖饼的歌喉嘹亮，“马”字拖得极长，下一个字拔高，末了“炉饼”二字清
-脆迸跳，然后突然噎住。是一个年轻健壮的声音，与卖臭豆腐干的苍老沙哑的喉咙遥遥相对，都是好嗓子。卖馄饨的就一声不出，只敲梆子。馄饨是消夜，晚上才有，臭豆腐干也要黄昏
-才出现，白天就是他一个人的天下。也许因为他的主顾不是沿街住户，而是路过的人力车三轮车夫，拉塌车的，骑脚踏车送货的，以及各种小贩，白天最多。可以拿在手里走着吃——
+脆迸跳，然后突然噎住。是一个年轻健壮的声音，与卖臭豆腐干的苍老沙哑的喉咙遥遥相对，都是好嗓子。卖馄饨的就一声不出，只敲梆子。馄饨是消夜，晚上才有，臭豆腐干也要黄昏才出现，白天就是他一个人的天下。也许因为他的主顾不是沿街住户，而是路过的人力车三轮车夫，拉塌车的，骑脚踏车送货的，以及各种小贩，白天最多。可以拿在手里走着吃——最便当的便当。
+
+战时汽车稀少，车声市声比较安静。在高楼上遥遥听到这漫长的呼声，我和姑姑都说过不止一次：“这炒炉饼不知道是什么样子。”
+
+“现在好些人都吃。”有一次我姑姑幽幽地说，若有所思。
+
+我也只“哦”了一声。印象中似乎不像大饼油条是平民化食品，这是贫民化了。我姑姑大概也是这样想。
+
+有一天我们房客的女佣买了一块，一角蛋糕似地搁在厨房桌上的花漆桌布上。一尺阔的大圆烙饼上切下来的，不过不是薄饼，有一寸多高，上面也许略洒了点芝麻。显然不是炒年糕一样在锅里炒的，不会是“炒炉饼”。再也想不出是个什么字，除非是“燥”？其实“燥炉”根本不通，火炉还有不干燥的？
+
+《八千岁》里的草炉饼是贴在炉子上烤的。这么厚的大饼绝对无法“贴烧饼”。《八千岁》的背景似是共党来之前的苏北一带。那里的草炉饼大概是原来的形式，较小而薄。江南的草炉饼疑是近代的新发展，因为太像中国本来没有的大蛋糕。
+
+战后就绝迹了。似乎战时的苦日子一过去，就没人吃了。
+
+我在街上碰见过一次，擦身而过，小贩臂上挽着的篮子里盖着布，掀开一角露出烙痕斑斑点点的大饼，饼面微黄，也许一叠有两三只。白布洗成了匀净的深灰色，看着有点恶心。
+
+匆匆一瞥，我只顾忙着看那久闻大名如雷贯耳的食品，没注意拎篮子的人，仿佛是个苍黑瘦瘠中年以上的男子。我也没想到与那年轻的歌声太不相称，还是太瘦了显老。
+
+上海五方杂处，土生土长的上海人反而少见。叫卖吃食的倒都是纯粹本地口音。有些土著出人意表地肤色全国最黑，至少在汉族内。而且黑中泛灰，与一般的紫膛色不同，倒比较像南太平洋关岛等小岛（Ｍｉｃｒｏｎｅｓｉａｎ）与澳洲原住民的炭灰皮色。我从前进的中学，舍监是青浦人——青浦的名称与黄浦对立，想来都在黄浦江边——生得黑里俏，女生背后给她取的绰号就叫阿灰。她这同乡大概长年户外工作，又更晒黑了。
+
+沿街都是半旧水泥弄堂房子的背面，窗户为了防贼，位置特高，窗外装凸出的细瘦黑铁栅。街边的洋梧桐，淡褐色疤斑的笔直的白圆筒树身映在人行道的细麻点水泥大方砖上，在耀眼的烈日下完全消失了。眼下遍地白茫茫晒褪了色，白纸上忽然来了这么个“墨半浓”的鬼影子，微驼的瘦长条子，似乎本来是圆脸，黑得看不清面目，乍见吓人一跳。
+
+就这么一只篮子，怎么够卖，一天叫到晚？难道就做一篮子饼，小本生意小到这样，真是袖珍本了。还是瘦弱得只拿得动一只篮子，卖完了再回去拿？那总是住得近。这里全是住宅区，紧接着通衢大道，也没有棚户。其实地段好，而由他一个人独占，想必也要走门路，警察方面塞点钱。不像是个乡下人为了现在乡下有日本兵与和平军，无法存活才上城来，一天卖一篮子饼，聊胜于无的营生。
+
+这些我都是此刻写到这里才想起来的，当时只觉得有点骇然。也只那么一刹那，此后听见“马草炉饼”的呼声，还是单纯地甜润悦耳，完全忘了那黑瘦得异样的人。至少就我而言，这是那时代的“上海之音”，周璇、姚莉的流行歌只是邻家无线电的噪音，背景音乐，不是主题歌。
+
+我姑姑有一天终于买了一块，下班回来往厨房桌上一撩，有点不耐烦地半恼半笑地咕噜了一声：“哪，炒炉饼。”
+
+报纸托着一角大饼，我笑着撕下一小块吃了，干敷敷地吃不出什么来。也不知道我姑姑吃了没有，还是给了房客的女佣了。
+
+中国人的宗教这篇东西本是写给外国人看的，所以非常粗浅，但是我想，有时候也应当像初级教科书一样地头脑简单一下，把事情弄明白些。
+
+表面上中国人是没有宗教可言的。中国智识阶级这许多年来一直是无神论者。佛教对于
+中国哲学的影响又是一个问题，可是佛教在普遍人的教育上似乎留下很少的痕迹。就因为对一切都怀疑，中国文学里弥漫着大的悲哀。只有在物质的细节上，它得到欢悦——因此《金瓶梅》、《红楼梦》仔仔细细开出整桌的菜单，毫无倦意，不为什么，就因为喜欢——细节往往是和美畅快，引人入胜的，而主题永远悲观。一切对于人生的笼统观察都指向虚无。
+
+世界各国的人都有类似的感觉，中国人与众不同的地方是：这“虚空的空虚，一切都是虚空”的感觉总像个新发现，并且就停留在这阶段。一个一个中国人看见花落水流，于是临风洒泪，对月长吁，感到生命之暂，但是他们就到这里为止，不往前想了。灭亡是不可避免的，然而他们并不因此就灰心，绝望，放浪，贪婪、荒淫——对于欧洲人，那似乎是合逻辑的反应。像文艺复兴时代的欧洲人，一旦不相信死后的永生了，便大大地作乐而且作恶，闹得天翻地覆。
+
+受过教育的中国人认为人一年年地活下去，并不走到哪里去；人类一代一代下去，也并不走到哪里去。那么，活着有什么意义呢？不管有意义没有，反正是活着的。我们怎样处置自己，并没多大关系，但是活得好一点是快乐的，所以为了自己的享受，还是守规矩的好。
+
+在那之外，就小心地留下了空白——并非懵腾地骚动着神秘的可能性的白雾，而是一切思想悬崖勒马的绝对停止，有如中国画上部严厉的空白——不可少的空白，没有它，图画便失去了均衡。不论在艺术里还是人生里，最难得的就是知道什么时候应当歇手。中国人最引以自傲的就是这种约束的美。
+
+当然，下等人在这种缺少兴趣的，稀薄的空气里是活不下去的。他们的宗教是许多不相连系的小小迷信组合而成的——星相，狐鬼，吃素。上等人与下等人所共有的观念似乎只有一个祖先崇拜，而这对于智识阶级不过是纯粹的感情作用，对亡人尽孝而已，没有任何宗教上的意义。
+
+中国人的一厢情愿但是仔细一研究，我们发现大家有一个共通的宗教背景。
+
+读书人和愚民唯一的不同之点是：读书人有点相信而不大肯承认；愚民承认而不甚相信。这模糊的心理布景一大部分是佛教与道教，与道教后期的神怪混合在一起，在中国人的头脑里浸了若干年，结果与原来的佛教大不相同了。下层阶级的迷信是这广大的机构中取出的碎片——这机构的全貌很少有人检阅过，大约因为太熟悉了的缘故。下层阶级的迷信既然是有系统的宇宙观的一部分，就不是迷信。
+
+这宇宙观能不能算一个宗教呢？中国的农民，你越是苦苦追问，他越不敢作肯定的答复，至多说：“鬼总是有的吧？
+
+看是没看见过。“至于智识阶级呢，他们嘴里说不信，其实也并没说谎，可是他们的思想行动偷偷地感染上了宗教背景的色彩，因为信虽不信，这是他们所愿意相信的。宗教本来一大半是一厢情愿。我们且看看中国人的愿望。
+
+中国的地狱中国人有一个道教的天堂与一个佛教的地狱。死后一切灵魂都到地狱里去受审判，所以不依基督教的地底火山，单只恶人在里面受罪的，我们的地府是比较空气流通的地方。
+
+“阴间”理该永远是黄昏，但有时也像个极其正常的都市，游客兴趣的集中点是那十八层地窖的监牢。生魂出窍，飘流到地狱里去，遇见过世的亲戚朋友，领他们到处观光，是常有的事。
+
+鬼的形态，有许多不同的传说，比较学院派的理论，说鬼不过是一口气不散，是气体；以此为根据，就断定看上去是个灰或黑色的剪影，禁不起风吹，随着时间的进展渐渐销磨掉，所以“新鬼大，故鬼小”。但是群众的理想总偏于照相式，因此一般的鬼现形起来总与死者一模一样。
+
+阴司的警察拘捕亡人的灵魂，最高法庭上坐着冥王，冥王手下的官僚是从干练的鬼中选出来的。生前有过大善行的囚犯们立即被释放，踏着金扶梯登天去了。滞留在地狱里的罪人，依照各种不同性质的罪过受各种不同的惩罚。譬如说，贪官污吏被迫喝下大量的铜的溶液。
