--- a/works/谈女人@张爱玲.md
+++ b/works/谈女人@张爱玲.md
@@ -78,7 +78,7 @@
 
 　　凡是说“女人怎样怎样”的话，多半是俏皮话。单图俏皮，意义的正确上不免要打个折扣，因为各人有各人的脾气，如何能够一概而论？但是比较上女人是可以一概而论的，因为天下人风俗习惯职业环境各不相同，而女人大半总是在户内持家看孩子，传统的生活典型既然只有一种，个人的习性虽不同也有限。因此，笼统地说“女人怎样怎样”，比说“男人怎样怎样”要有把握些。
 
-　　记得我们学校里有过一个非正式的辩论会，一经涉及男亥问题，大家全都忘了原先的题目是什么，单单集中在这一点上，七嘴八舌，嬉笑怒骂，空气异常热烈。有一位女士以老新党的口吻佩佩谈到男子如何不公平，如何欺凌女子——这柔脆的，感情丰富的动物，利用她的情感来拘禁她，逼迫她作玩物，在生存竞争上女子之所以占下风全是因为机会不均等……在男女的论战中，女人永远是来这么一套。当时我忍不住要驳她，倒不是因为我专门喜欢做偏锋文章，实在是听厌了这一切。一九三０年间女学生们人手一册的《玲珑》杂志就是一面传授影星美容秘诀一面教导“美”了“容”的女子怎样严密防范男子的进攻，因为男子都是“心存不良”的，谈恋爱固然危险，便结婚也危险，因为结婚是恋爱的坟墓……
+　　记得我们学校里有过一个非正式的辩论会，一经涉及男孩问题，大家全都忘了原先的题目是什么，单单集中在这一点上，七嘴八舌，嬉笑怒骂，空气异常热烈。有一位女士以老新党的口吻佩佩谈到男子如何不公平，如何欺凌女子——这柔脆的，感情丰富的动物，利用她的情感来拘禁她，逼迫她作玩物，在生存竞争上女子之所以占下风全是因为机会不均等……在男女的论战中，女人永远是来这么一套。当时我忍不住要驳她，倒不是因为我专门喜欢做偏锋文章，实在是听厌了这一切。一九三０年间女学生们人手一册的《玲珑》杂志就是一面传授影星美容秘诀一面教导“美”了“容”的女子怎样严密防范男子的进攻，因为男子都是“心存不良”的，谈恋爱固然危险，便结婚也危险，因为结婚是恋爱的坟墓……
 
 　　女人这些话我们耳熟能详，男人的话我们也听得太多了，无非骂女子十恶不赦，罄竹难书，惟为民族生存计，不能赶尽杀绝。
 
